python_stack/django/django_fundamentals/Dojo_Ninja/Ass with IZz/New Text Document.txt
Microsoft Windows [Version 10.0.22000.978]
(c) Microsoft Corporation. All rights reserved.

C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>code .

C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>call C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\djangoPy3Env\Scripts\activate

(djangoPy3Env) C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>python manage.py runserver
Watching for file changes with StatReloader
Performing system checks...

System check identified no issues (0 silenced).
September 26, 2022 - 11:14:59
Django version 2.2.4, using settings 'Dojo_Ninja.settings'
Starting development server at http://127.0.0.1:8000/
Quit the server with CTRL-BREAK.
[26/Sep/2022 11:15:21] "GET / HTTP/1.1" 200 3125
[26/Sep/2022 11:15:21] "GET /static/css/style.css HTTP/1.1" 404 1663
5
[26/Sep/2022 11:15:33] "POST /show2 HTTP/1.1" 302 0
[26/Sep/2022 11:15:33] "GET / HTTP/1.1" 200 3157
[26/Sep/2022 11:15:33] "GET /static/css/style.css HTTP/1.1" 404 1663

(djangoPy3Env) C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>python manage.py shell
Python 3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from my_app.models import*
>>> Ninjas.objects.all().delete
<bound method QuerySet.delete of <QuerySet [<Ninjas: Ninjas object (1)>, <Ninjas: Ninjas object (2)>, <Ninjas: Ninjas object (3)>, <Ninjas: Ninjas object (4)>, <Ninjas: Ninjas object (5)>, <Ninjas: Ninjas object (6)>, <Ninjas: Ninjas object (7)>, <Ninjas: Ninjas object (8)>, <Ninjas: Ninjas object (9)>, <Ninjas: Ninjas object (10)>, <Ninjas: Ninjas object (11)>, <Ninjas: Ninjas object (12)>, <Ninjas: Ninjas object (13)>, <Ninjas: Ninjas object (14)>, <Ninjas: Ninjas object (15)>, <Ninjas: Ninjas object (16)>, <Ninjas: Ninjas object (17)>, <Ninjas: Ninjas object (18)>, <Ninjas: Ninjas object (19)>, <Ninjas: Ninjas object (20)>, '...(remaining elements truncated)...']>>
>>> Ninjas.objects.all().delete()
(21, {'my_app.Ninjas': 21})
>>> dojos.objects.all().delete())
  File "<console>", line 1
    dojos.objects.all().delete())
                                ^
SyntaxError: unmatched ')'
>>> Dojos.objects.all().delete()
(10, {'my_app.Ninjas': 0, 'my_app.Dojos': 10})
>>> Dojos.objects.create(name='Sura', city="Jenin", state='Palestine')
<Dojos: Dojos object (11)>
>>> Dojos.objects.create(name='Izz', city="Jenin", state='Palestine')
<Dojos: Dojos object (12)>
>>> Dojos.objects.create(name='Tareq', city="Jenin", state='Palestine')
<Dojos: Dojos object (13)>
>>> Dojos.objects.get(id=11).delete()
(1, {'my_app.Ninjas': 0, 'my_app.Dojos': 1})
>>> Dojos.objects.get(id=12).delete()
(1, {'my_app.Ninjas': 0, 'my_app.Dojos': 1})
>>> Dojos.objects.get(id=11).delete()
Traceback (most recent call last):
  File "<console>", line 1, in <module>
  File "C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\djangoPy3Env\lib\site-packages\django\db\models\manager.py", line 82, in manager_method
    return getattr(self.get_queryset(), name)(*args, **kwargs)
  File "C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\djangoPy3Env\lib\site-packages\django\db\models\query.py", line 406, in get
    raise self.model.DoesNotExist(
my_app.models.Dojos.DoesNotExist: Dojos matching query does not exist.
>>> Dojos.objects.get(id=13).delete()
(1, {'my_app.Ninjas': 0, 'my_app.Dojos': 1})
>>> Dojos.objects.create(name='Izz', city="Jenin", state='Palestine')
<Dojos: Dojos object (14)>
>>> Dojos.objects.create(name='Ali', city="Jenin", state='Palestine')
<Dojos: Dojos object (15)>
>>> Dojos.objects.create(name='Ahmad', city="Jenin", state='Palestine')
<Dojos: Dojos object (16)>
>>> c= Dojos.objects.get(id=14)
>>> Ninja1= Ninjas.objects.create(first_name='Ali', last_name='Izz',dojo=c)
>>> Ninja2= Ninjas.objects.create(first_name='Ahamd', last_name='Izz',dojo=c)
>>> Ninja3= Ninjas.objects.create(first_name='Omar', last_name='Izz',dojo=c)
>>> c= Dojos.objects.get(id=15)
>>> Ninja3= Ninjas.objects.create(first_name='Sura', last_name='Izz',dojo=c)
>>> Ninja2= Ninjas.objects.create(first_name='Tareq', last_name='Izz',dojo=c)
>>> Ninja1= Ninjas.objects.create(first_name='Akram', last_name='Izz',dojo=c)
>>> c= Dojos.objects.get(id=16)
>>> Ninja1= Ninjas.objects.create(first_name='Hakam', last_name='Izz',dojo=c)
>>> Ninja2= Ninjas.objects.create(first_name='Husaam', last_name='Izz',dojo=c)
>>> Ninja3= Ninjas.objects.create(first_name='Ola', last_name='Izz',dojo=c)
>>> this_dojo = Dojos.objects.get(id=14)
>>> ninjas = Ninjas.objects.filter(dojo = this_dojo)
>>> print(ninjas)
<QuerySet [<Ninjas: Ninjas object (22)>, <Ninjas: Ninjas object (23)>, <Ninjas: Ninjas object (24)>]>

>>> print(ninjas.values)
<bound method QuerySet.values of <QuerySet [<Ninjas: Ninjas object (22)>, <Ninjas: Ninjas object (23)>, <Ninjas: Ninjas object (24)>]>>
>>> print(ninjas.values())
<QuerySet [{'id': 22, 'first_name': 'Ali', 'last_name': 'Izz', 'dojo_id': 14, 'created_at': datetime.datetime(2022, 9, 26, 8, 26, 59, 906757, tzinfo=<UTC>), 'updated_at': datetime.datetime(2022, 9, 26, 8, 26, 59, 906757, tzinfo=<UTC>)}, {'id': 23, 'first_name': 'Ahamd', 'last_name': 'Izz', 'dojo_id': 14, 'created_at': datetime.datetime(2022, 9, 26, 8, 27, 12, 339135, tzinfo=<UTC>), 'updated_at': datetime.datetime(2022, 9, 26, 8, 27, 12, 339135, tzinfo=<UTC>)}, {'id': 24, 'first_name': 'Omar', 'last_name': 'Izz', 'dojo_id': 14, 'created_at': datetime.datetime(2022, 9, 26, 8, 27, 27, 267274, tzinfo=<UTC>), 'updated_at': datetime.datetime(2022, 9, 26, 8, 27, 27, 267274, tzinfo=<UTC>)}]>
>>> this_dojo = Dojos.objects.last()
>>> ninjas = Ninjas.objects.filter(dojo = this_dojo)
>>> ninjas.values()
<QuerySet [{'id': 28, 'first_name': 'Hakam', 'last_name': 'Izz', 'dojo_id': 16, 'created_at': datetime.datetime(2022, 9, 26, 8, 29, 5, 202081, tzinfo=<UTC>), 'updated_at': datetime.datetime(2022, 9, 26, 8, 29, 5, 202081, tzinfo=<UTC>)}, {'id': 29, 'first_name': 'Husaam', 'last_name': 'Izz', 'dojo_id': 16, 'created_at': datetime.datetime(2022, 9, 26, 8, 29, 45, 804455, tzinfo=<UTC>), 'updated_at': datetime.datetime(2022, 9, 26, 8, 29, 45, 804455, tzinfo=<UTC>)}, {'id': 30, 'first_name': 'Ola', 'last_name': 'Izz', 'dojo_id': 16, 'created_at': datetime.datetime(2022, 9, 26, 8, 29, 59, 293458, tzinfo=<UTC>), 'updated_at': datetime.datetime(2022, 9, 26, 8, 29, 59, 293458, tzinfo=<UTC>)}]>

>>> exit()

(djangoPy3Env) C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>python manage.py makemigrations
You are trying to add a non-nullable field 'desc' to dojos without a default; we can't do that (the database needs something to populate existing rows).
Please select a fix:
 1) Provide a one-off default now (will be set on all existing rows with a null value for this column)
 2) Quit, and let me add a default in models.py
Select an option: 2

(djangoPy3Env) C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>python manage.py makemigrations
Migrations for 'my_app':
  my_app\migrations\0004_dojos_desc.py
    - Add field desc to dojos

(djangoPy3Env) C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, my_app, sessions
Running migrations:
  Applying my_app.0004_dojos_desc... OK

(djangoPy3Env) C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>python manage.py makemigrations
Migrations for 'my_app':
  my_app\migrations\0005_auto_20220926_1147.py
    - Alter field desc on dojos

(djangoPy3Env) C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>python manage.py migrate
Operations to perform:
  Apply all migrations: admin, auth, contenttypes, my_app, sessions
Running migrations:
  Applying my_app.0005_auto_20220926_1147... OK

(djangoPy3Env) C:\Users\soraq\OneDrive\Desktop\Codingdojo\python_stack\django\django_fundamentals\Dojo_Ninja>python manage.py shell
Python 3.10.0 (tags/v3.10.0:b494f59, Oct  4 2021, 19:00:18) [MSC v.1929 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
(InteractiveConsole)
>>> from my_app.models import *
>>> Dojos.objects.create(name="izz",city="klahnsd", state="KA",desc="anything")
<Dojos: Dojos object (17)>
>>>